--- a/LetterRecog.ipynb
+++ b/LetterRecog.ipynb
@@ -10,13 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,13 +52,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/2z/xx_s870x0kd3j9xrkh_8bg900000gn/T/ipykernel_65813/764930586.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  HK['lettr'] = le.transform(HK['lettr'])\n"
+     ]
+    }
+   ],
    "source": [
     "HK = raw_data[raw_data['lettr'].isin(['H', 'K'])]\n",
+    "le = LabelEncoder()\n",
+    "le.fit(HK['lettr'])\n",
     "\n",
-    "HK_X_train, HK_X_test, HK_y_train, HK_y_test = train_test_split(HK.drop('lettr', axis=1), HK['lettr'], test_size=0.1, random_state=514)\n"
+    "# Transform the target column using the LabelEncoder\n",
+    "HK['lettr'] = le.transform(HK['lettr'])\n",
+    "HK = HK.reset_index(drop=True)\n",
+    "HK_X_train, HK_X_test, HK_y_train, HK_y_test = train_test_split(HK.drop('lettr', axis=1), HK['lettr'], test_size=0.1, random_state=514)\n",
+    "# Reset index of HK_X_train\n",
+    "HK_X_train = HK_X_train.reset_index(drop=True)\n",
+    "\n",
+    "# Reset index of HK_X_test\n",
+    "HK_X_test = HK_X_test.reset_index(drop=True)\n",
+    "\n",
+    "# Reset index of HK_y_train\n",
+    "HK_y_train = HK_y_train.reset_index(drop=True)\n",
+    "\n",
+    "# Reset index of HK_y_test\n",
+    "HK_y_test = HK_y_test.reset_index(drop=True)\n",
+    "\n"
    ]
   },
   {
@@ -69,11 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "MY = raw_data[raw_data['lettr'].isin(['M', 'Y'])]\n",
+    "MY = MY.reset_index(drop=True)\n",
     "MY_X_train, MY_X_test, MY_y_train, MY_y_test = train_test_split(MY.drop('lettr', axis=1), MY['lettr'], test_size=0.1, random_state=514)"
    ]
   },
@@ -87,11 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "XT = raw_data[raw_data['lettr'].isin(['X','T'])]\n",
+    "XT = XT.reset_index(drop=True)\n",
     "XT_X_train, XT_X_test, XT_y_train, XT_y_test = train_test_split(XT.drop('lettr', axis=1), XT['lettr'], test_size=0.1, random_state=514)"
    ]
   },
@@ -112,11 +146,55 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1.1 Preparation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class KNearestNeighbor:\n",
+    "\n",
+    "    def __init__(self, k=3):\n",
+    "        self.n_neighbors = k\n",
+    "\n",
+    "    def train(self, X, y):\n",
+    "        self.X_train = X\n",
+    "        self.y_train = y\n",
+    "\n",
+    "    def euclidean_distance(self, row1, row2):\n",
+    "        return np.sqrt(np.sum((row1 - row2)**2))\n",
+    "\n",
+    "    def predict(self, X_test):\n",
+    "        y_pred = []\n",
+    "        \n",
+    "        for i in range(1,len(X_test)):\n",
+    "            distances = []\n",
+    "            \n",
+    "            for j in range(1,len(self.X_train)):\n",
+    "                dist = self.euclidean_distance(X_test.iloc[i, :], self.X_train.iloc[j, :])\n",
+    "                \n",
+    "                distances.append((j, dist))\n",
+    "            \n",
+    "            sorted_distances = sorted(distances, key=lambda x: x[1])\n",
+    "            k_nearest_neighbors = [self.y_train[x[0]] for x in sorted_distances[:self.n_neighbors]]\n",
+    "            most_common_label = max(set(k_nearest_neighbors), key=k_nearest_neighbors.count)\n",
+    "            y_pred.append(most_common_label)\n",
+    "            \n",
+    "        return y_pred\n",
+    "            \n",
+    "KNN = KNearestNeighbor(k=3)\n",
+    "KNN.train(HK_X_train.reset_index(drop=True), HK_y_train.reset_index(drop=True))\n",
+    "HK_y_pred = KNN.predict(HK_X_test)\n",
+    "acc = np.mean(HK_y_pred == HK_y_test)\n",
+    "print('测试集预测准确率：%f' % acc)"
+   ]
   },
   {
    "attachments": {},
@@ -130,7 +208,250 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x-box</th>\n",
+       "      <th>y-box</th>\n",
+       "      <th>width</th>\n",
+       "      <th>high</th>\n",
+       "      <th>onpix</th>\n",
+       "      <th>x-bar</th>\n",
+       "      <th>y-bar</th>\n",
+       "      <th>x2bar</th>\n",
+       "      <th>y2bar</th>\n",
+       "      <th>xybar</th>\n",
+       "      <th>x2ybr</th>\n",
+       "      <th>xy2br</th>\n",
+       "      <th>x-ege</th>\n",
+       "      <th>xegvy</th>\n",
+       "      <th>y-ege</th>\n",
+       "      <th>yegvx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "      <td>1325.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.407547</td>\n",
+       "      <td>7.084528</td>\n",
+       "      <td>5.841509</td>\n",
+       "      <td>5.286792</td>\n",
+       "      <td>4.092075</td>\n",
+       "      <td>6.487547</td>\n",
+       "      <td>7.186415</td>\n",
+       "      <td>5.281509</td>\n",
+       "      <td>4.767547</td>\n",
+       "      <td>8.138868</td>\n",
+       "      <td>6.038491</td>\n",
+       "      <td>8.796981</td>\n",
+       "      <td>3.950943</td>\n",
+       "      <td>7.869434</td>\n",
+       "      <td>3.591698</td>\n",
+       "      <td>8.346415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.890093</td>\n",
+       "      <td>3.312128</td>\n",
+       "      <td>2.192530</td>\n",
+       "      <td>2.204606</td>\n",
+       "      <td>2.181834</td>\n",
+       "      <td>1.802785</td>\n",
+       "      <td>1.051167</td>\n",
+       "      <td>3.784409</td>\n",
+       "      <td>2.238499</td>\n",
+       "      <td>1.590770</td>\n",
+       "      <td>1.880300</td>\n",
+       "      <td>1.592180</td>\n",
+       "      <td>1.459890</td>\n",
+       "      <td>1.028452</td>\n",
+       "      <td>2.225930</td>\n",
+       "      <td>1.598714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             x-box        y-box        width         high        onpix  \\\n",
+       "count  1325.000000  1325.000000  1325.000000  1325.000000  1325.000000   \n",
+       "mean      4.407547     7.084528     5.841509     5.286792     4.092075   \n",
+       "std       1.890093     3.312128     2.192530     2.204606     2.181834   \n",
+       "min       0.000000     0.000000     1.000000     0.000000     0.000000   \n",
+       "25%       3.000000     5.000000     4.000000     4.000000     2.000000   \n",
+       "50%       4.000000     7.000000     6.000000     6.000000     4.000000   \n",
+       "75%       5.000000     9.000000     7.000000     7.000000     5.000000   \n",
+       "max      12.000000    15.000000    12.000000    10.000000    11.000000   \n",
+       "\n",
+       "             x-bar        y-bar        x2bar        y2bar        xybar  \\\n",
+       "count  1325.000000  1325.000000  1325.000000  1325.000000  1325.000000   \n",
+       "mean      6.487547     7.186415     5.281509     4.767547     8.138868   \n",
+       "std       1.802785     1.051167     3.784409     2.238499     1.590770   \n",
+       "min       2.000000     4.000000     1.000000     0.000000     5.000000   \n",
+       "25%       5.000000     7.000000     3.000000     3.000000     7.000000   \n",
+       "50%       7.000000     7.000000     4.000000     6.000000     7.000000   \n",
+       "75%       8.000000     8.000000     7.000000     7.000000    10.000000   \n",
+       "max      11.000000    12.000000    15.000000     9.000000    12.000000   \n",
+       "\n",
+       "             x2ybr        xy2br        x-ege        xegvy        y-ege  \\\n",
+       "count  1325.000000  1325.000000  1325.000000  1325.000000  1325.000000   \n",
+       "mean      6.038491     8.796981     3.950943     7.869434     3.591698   \n",
+       "std       1.880300     1.592180     1.459890     1.028452     2.225930   \n",
+       "min       1.000000     4.000000     2.000000     2.000000     0.000000   \n",
+       "25%       5.000000     8.000000     3.000000     8.000000     3.000000   \n",
+       "50%       6.000000     8.000000     3.000000     8.000000     3.000000   \n",
+       "75%       7.000000    10.000000     5.000000     8.000000     5.000000   \n",
+       "max      12.000000    13.000000    10.000000    12.000000    11.000000   \n",
+       "\n",
+       "             yegvx  \n",
+       "count  1325.000000  \n",
+       "mean      8.346415  \n",
+       "std       1.598714  \n",
+       "min       3.000000  \n",
+       "25%       7.000000  \n",
+       "50%       8.000000  \n",
+       "75%       9.000000  \n",
+       "max      14.000000  "
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
